# firebase-sdk-rs

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
src/: errors.rs  lib.rs
src/auth/: mod.rs
